--- a/haha/pom.xml
+++ b/haha/pom.xml
@@ -3,8 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>con.ganler.test</groupId>
     <artifactId>haha</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>web</module>
+    </modules>
     <name>haha Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -13,6 +16,17 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
